--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -65,6 +65,12 @@ jobs:
       with:
         go-version: '1.21'
 
+    - name: Go module download (prepare go.sum)
+      run: |
+        go env -w GOPRIVATE=
+        go mod download
+        go mod tidy
+
     - name: Cache Go modules
       uses: actions/cache@v3
       with:
