--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -126,6 +126,6 @@ jobs:
 
     - name: Upload Trivy scan results to GitHub Security tab
       uses: github/codeql-action/upload-sarif@v3
-      if: always() && exists('trivy-results.sarif')
+      if: ${{ always() && hashFiles('trivy-results.sarif') != '' }}
       with:
         sarif_file: 'trivy-results.sarif'
